WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11535
REGRESSION: onclick="this.select();" not working on new forms
https://bugs.webkit.org/show_bug.cgi?id=11535
Summary
REGRESSION: onclick="this.select();" not working on new forms
Matt Lilek
Reported
2006-11-06 14:53:43 PST
When you load the url and click the text field "Foobar" should become selected, but doesn't. Seems to be a problem with the new forms since shipping Safari and Omniweb (as well as Gecko-based browsers) both behave properly. This isn't an issue with this.select() as it works perfectly on other event handlers (onfocus, onmouseover, etc), nor is it an issue with onclick as other javascript works fine.
Attachments
patch, change log, layout test
(7.48 KB, patch)
2007-02-05 15:40 PST
,
Darin Adler
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2007-01-22 17:26:37 PST
radar <
rdar://problem/4946959
>
Darin Adler
Comment 2
2007-02-05 15:40:44 PST
Created
attachment 12956
[details]
patch, change log, layout test
John Sullivan
Comment 3
2007-02-05 15:45:43 PST
Comment on
attachment 12956
[details]
patch, change log, layout test Looks good to me, and has nice layout test. r=me
Darin Adler
Comment 4
2007-02-05 15:51:27 PST
Committed revision 19416.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug